--- a/Cruso Basico Javascript/intrucuccion.html
+++ b/Cruso Basico Javascript/intrucuccion.html
@@ -19,5 +19,21 @@
     <h2>variables</h2></center>
     <! Vamos a trabajar con variables en javascrip -->
     <script src="index.js"></script><br>
+
+    <p>Haremos una calculadora</p>
+    <form action="" >
+        <input type="text" id="n1">
+        <input type="text" id="n2">
+        <input type="button" value="sumar" onclick="alert( suma(10,20));">
+    </form>
+    <script>
+        var suma = function (n1,n2){
+        var n1 = parseInt(document.getElementById("n1").Value);
+        var n2 = parseInt(document.getElementById("n2").Value);
+        
+        var resultado = n1+n2;
+        return resultado;
+        }
+        </script>
 </body>
 </html>
