--- a/layouts-responsivos/index.html
+++ b/layouts-responsivos/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!--header>img+nav>ul>il*6>a todo esto se hace con el metodo EMMET-->
-        <header class="head">
+        <header class="head container">
             <img class="head__logo" src="img/logo-apeperia.svg" alt="logo de Apeperia">
             <nav class="head__navegacion">
                 <ul>
@@ -28,10 +28,10 @@
             </nav>
         </header>
         <main>
-            <section class="llamada">
+            <section class="llamada container">
                 <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
                 <p class="llamada__texto ">Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.</p>
-                <a class="llamada__boton" href="#" >Conozca los planes</a>
+                <a class="llamada__boton boton" href="#" >Conozca los planes</a>
             </section>
         </main>
     </body>
