--- a/CursoOracleLogica/Encriptador/index.html
+++ b/CursoOracleLogica/Encriptador/index.html
@@ -17,16 +17,16 @@
                     <p>Solo letras minúsculas y sin acéntos</p>
                 </div>
                 <div class="botones">
-                    <button class="btn-encriptar" type="button" onclick="encriptador()">Encriptar</button>
-                    <button class="btn-desencriptar" type="button" onclick="">Desencriptador</button>
+                    <button class="btn-encriptar" type="button" onclick="encriptar()">Encriptar</button>
+                    <button class="btn-desencriptar" type="button" onclick="desencritar()">Desencriptador</button>
                 </div>
             </div>
             <div class="encriptado">
-                <img src="img/encritador.jpg"alt="10" width="400" id="candado">
+                <img src="img/mueñco.png"alt="" id="candado">
                 <div class="mensaje-ecnriptado" id="mensaje-ecnriptado">
-                    <h2 id="titulo-mensaje">Ningún Mensaje Encontrado</h2>
-                    <p id="parrafo">Ingresa el Texto ue desea Encriptar o Desencriptar</p>
-                    <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>
+                    <h2 id="titulo-mensaje">Ningún Mensaje fue Encontrado</h2>
+                    <p id="parrafo">Ingresa el Texto que desea Encriptar o Desencriptar</p>
+                    <!--<textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>-->
                 </div>
             </div>
         </div>
