--- a/layouts-responsivos/index.html
+++ b/layouts-responsivos/index.html
@@ -14,8 +14,10 @@
         <link href="css/destacados.css" rel="stylesheet">
         <link href="css/diferenciales.css" rel="stylesheet">
         <link href="css/sobre-nosotros.css" rel="stylesheet">
-        <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/planes.css" rel="stylesheet">
         <link href="css/contacto.css" rel="stylesheet">
+        <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/footer.css" rel="stylesheet">
     </head>
     <body>
         <!--header>img+nav>ul>il*6>a todo esto se hace con el metodo EMMET-->
@@ -92,6 +94,7 @@
                     </ul>
                     <p class="sobre_nosotros__texto">Desarrollamos aplicaciones para todas plataformas</p>
                 </div>
+                <img src="img/sobre-apeperia.png" alt="Sobre Nosotros" class="sobre_nosotros__imagen">
             </section>
             <section class="planes container">
                 <h2 class="planes__titulo">Planes</h2>
@@ -133,7 +136,46 @@
                 <p>Entre en contacto con nosotros</p>
                 <a href="#" class="contacto__boton boton">Entre en contacto</a>
             </section>
+            <section class="institucional container">
+                <h2 class="institucional__titulo "> Institucional </h2>
+                <div class="institucional__contenido">
+                    <div class="institucional__informaciones">
+                        <p class="institucional__descripcion"> Un poco más sobre Apeperia</p>
+                        <address class="institucional__direccion">
+                            Calle Vergueiro, 3185</br>
+                            Villa Mariana, São Paulo
+                            <article class="institucional__contacto">
+                                <p>
+                                    <a href="tel:+551155712751 " class="institucional__contacto-telefono">+55 11 55712751</a> o
+                                    <a href="mailto:contato@apeperia.com" class="institucional__contacto-email ">contato@apeperia.com</a>
+                                </p>
+                            </article>
+                        </address>
+                    </div>
+                    <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
+                </div>
+            </section>
         </main>
+        <footer class="footer container">
+            <img src="img/logo-apeperia.svg" alt="" class="footer_logo">
+            
+            <ul class="footer__social">
+                <li><a href="#" class="footer__midia"><img src="img/facebook.png" alt="incono de Facebook"></a></li>
+                <li><a href="#" class="footer__midia"><img src="img/instagram.png" alt="icono de instagram"></a></li>
+                <li><a href="#" class="footer__midia"><img src="img/twitter.png" alt="icono de twitter"></a></li>
+
+                </ul>
+            <nav>
+                <ul class="footer__navegacion">
+                    <li class="footer__enlace"><a href="#">Sobre</a></li>
+                    <li class="footer__enlace"><a href="#">Planes</a></li>
+                    <li class="footer__enlace"><a href="#">Blog</a></li>
+                    <li class="footer__enlace"><a href="#">Destacados</a></li>
+                    <li class="footer__enlace"><a href="#">Institucional</a></li>
+                    <li class="footer__enlace"><a href="#"> Contacto</a></li>
+                </ul>
+            </nav>
+        </footer>
 
     </body>
 </html>
