--- a/Arquitectura-css-base-main/index.html
+++ b/Arquitectura-css-base-main/index.html
@@ -6,10 +6,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruta & Fruto</title>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
-    <link href="./assets/css/normalize.css" rel="stylesheet" />
+    <link href="./assets/css/normalice.css" rel="stylesheet" />
     <link href="./assets/css/reset.css" rel="stylesheet" />
+    <link href="assets/css/cabecera.css" rel="stylesheet">
+    <link href="assets/css/menu/menu-list.css" rel="stylesheet">
+    <link href="assets/css/menu/menu-items.css" rel="stylesheet">
+    <link href="assets/css/menu/menu-link.css" rel="stylesheet">
+    <link href="assets/css/banner/banner.css" rel="stylesheet">
+    <link href="assets/css/banner/banner-img.css" rel="stylesheet">
+    <link href="assets/css/banner/banner-titulo.css" rel="stylesheet">
+    <link href="assets/css/sobre/sobre.css" rel="stylesheet">
+    <link href="assets/css/sobre/sobre-titulo.css" rel="stylesheet">
+    <link href="assets/css/sobre/sobre-descrip.css" rel="stylesheet">
+   
 </head>
     <body>
+        <header class="cabecera">
+            <img class="logo" src="assets/img/logo.jpg" alt="Fruta y Fruto">
+            <nav class="menu">
+                <ul class="menu__lista">
+                    <li class="menu__item"><a class="menu__link activo" href="">Inicio</a></li>
+                    <li class="menu__item"><a  class="menu__link" href="">Resetas</a></li>
+                    <li class="menu__item"><a  class="menu__link" href="">Quienes Somos</a></li>
+                    <li class="menu__item"><a  class="menu__link" href="">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="banner">
+            <img class="banner__img" src="assets/img/banner.png" alt="banner">
+            <h2 class="banner__titulo">Reaproveche mejor los alimentos</h2>
+        </section>
+        <section class="sobre">
+            <h2 class="sobre__titulo"> Recetas para economizar y ganar salud </h2>
+            <p class="sobre__descripcion"> Nuestras recetas e ayudan a aprovechar mejor los alimentos, economizar, ganar tiempo y practicidad </p> 
+        </section>
+        <section class="recetas">
+            <div class="receta">
+              <img class="receta__imagen" alt="bol de aguacate" src="./assets/img/recetas/ensalada-de-frutas.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">bol de aguacate</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+            <div class="receta">
+              <img class="receta__imagen" alt="Ensalada de kiwi" src="./assets/img/recetas/ensalada-de-kiwi.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">Ensalada de kiwi</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+            <div class="receta">
+              <img class="receta__imagen" alt="Mix de vegetales" src="./assets/img/recetas/mix-de-vegetales.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">Mix de vegetales</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+            <div class="receta">
+              <img class="receta__imagen" alt="Pimentones en Juliana" src="./assets/img/recetas/pimentones-juliana.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">Pimentones en Juliana</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+            <div class="receta">
+              <img class="receta__imagen" alt="Plato oriental" src="./assets/img/recetas/plato-oriental.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">Plato oriental</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+            <div class="receta">
+              <img class="receta__imagen" alt="Remolachas asadas" src="./assets/img/recetas/beterrabas-asadas.jpg" />
+              <div class="receta__contenido">
+                <h4 class="receta__titulo">Remolachas assadas</h4>
+                <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
+                <button class="receta__boton">Ver receta</button>
+              </div>
+            </div>
+          </section>
       
     </body>
 </html>
